fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -267,5 +267,6 @@ pre {
   background: #282c34;
   padding: 1em;
   border-radius: 0.5em;
-  font-size: 0.9em;
+  font-size: 0.85em;
+  overflow-x: scroll;
 }
